Revision history for XML-Grammar-Fiction.

0.1.4       Mon Apr  4 00:50:07 IDT 2011
    * ::Screenplay - Fix the innerdesc on the start of the line in the middle 
    of the paragraph. Like:

-----------------
Hi I went to the store and
[walks around the room, nervous] bought a chocolate bar.
-----------------

        - this was caused by two bugs here

-----------------
-$self->_prev_line_is_empty($self->curr_line_ref() =~ m{\A\s*\z});
+$self->_prev_line_is_empty(scalar(${$self->curr_line_ref()} =~ m{\A\s*\z}));
-----------------

        - they cancelled each other most of the time except for in this 
        case.

    * ::Screenplay - add support for Screenplay-Text's <i> tags which get
    translated into Screenplay-XML's <italics> tags.

0.1.3       Fri Dec 17 19:38:45 IST 2010
        - Moved some unused source files to the rejects directory.
        - Convert to the new XML-Grammar-Fiction-Builder which uses
        File::ShareDir, which will hopefully resolve testing and installation
        problems.

0.1.2       Thu Apr 29 22:47:04 IDT 2010
        - In the Build.PL - merged 'test_requires' into 'build_requires'. 
        Turns out that 'test_requires' is a Module::Installism.

0.1.1       Tue Apr 27 10:11:00 IDT 2010
        - Made sure XML-Grammar-Screenplay used
        XML::Grammar::Fiction::ConfigData instead of 
        XML::Grammar::Screenplay::ConfigData . This broke the installation
        and tests on the following test reports:
            - http://www.cpantesters.org/cpan/report/7167671
            - http://www.cpantesters.org/cpan/report/7167759
            - http://www.cpantesters.org/cpan/report/7167134
        
0.1.0       Mon Apr 26 19:25:55 IDT 2010
        - Merged in the XML-Grammar-Screenplay into this module.
        - Converted XML-Grammar-Screenplay to a non-procedurally-recursive
        parser.
        - Created some base classes:
            - lib/XML/Grammar/Fiction/FromProto/Parser/LineIterator.pm